src/objects/Salary_Details__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic__c</fullName>
        <description>Mandatory</description>
        <label>Basic</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credited_To__c</fullName>
        <label>Credited To</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Salary Details</relationshipLabel>
        <relationshipName>Salary_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Salary__c</fullName>
        <formula>Total_Earnings__c  -  PF_Deduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HRA__c</fullName>
        <description>Mandatory</description>
        <label>HRA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>RTGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Deduction__c</fullName>
        <description>Mandatory</description>
        <label>PF Deduction</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salary_Credit_Date__c</fullName>
        <description>Mandatory</description>
        <label>Salary Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Salary_ID__c</fullName>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Salary ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Special_Allowance__c</fullName>
        <description>Mandatory</description>
        <label>Special Allowance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Earnings__c</fullName>
        <formula>Basic__c  +  HRA__c  +  Special_Allowance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Salary Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Salary Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Basic_Salary</fullName>
        <active>true</active>
        <errorConditionFormula>Basic__c &lt;1</errorConditionFormula>
        <errorDisplayField>Basic__c</errorDisplayField>
        <errorMessage>Basic Salary cannot be 0</errorMessage>
    </validationRules>
</CustomObject>